methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:18: error: '=' expected but integer literal found.
def fleur 5(){
          ^FlowerPot:22: error: illegal start of simple expression
}
^