methods.flowerpot.FlowerPot.scala.code
def growFlowers(){
  fleur12();droite();avance();avance();avance();gauche();recule();recule();recule();recule();recule();recule();
  fleur34();gauche();avance();avance();droite();recule();recule();recule();recule();fleur5();droite();avance();avance();gau che();recule();recule();
}

def fleur(c:Color){
  avance();setCouleurBrosse(Color.YELLOW);baisseBrosse();leveBrosse();setCouleurBrosse(c);avance();baisseBrosse();leveBrosse();gauche();avance();gauche();avance();baisseBrosse();leveBrosse();avance();gauche();avance();baisseBrosse();leveBrosse();avance();gauche();avance();baisseBrosse();leveBrosse();avance();gauche();avance();droite();
}

def fleur12(){
  fleur(Color.RED);avance();avance();fleur(Color.CYAN)
}

def fleur34(){
  fleur(Color.PINK);avance();avance();fleur(Color.GREEN)
}

def fleur 5(){
  fleur(Color.ORANGE)
}